[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "The Board of Trustees of the Leland Stanford Junior University, through SLAC National Accelerator Laboratory"},
    {name = "Matt Gibbs"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pydantic",
    "pyepics",
    "slac-devices @ git+https://github.com/slaclab/slac-devices.git@main",
]
description = "Timing buffer interface for LCLS beam synchronous acquisition"
name = "slac-timing"
version = "0.1.0"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["slac_timing*"]